# Capstone

./: .gitignore  Cargo.toml  LICENSE  build.rs  rust-toolchain.toml
docs/superpowers/specs/: 2026-07-09-vga-text-mode-design.md
kernel/: Cargo.toml  x86_64-seal_os.json
kernel/.cargo/: config.toml
kernel/src/: framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs
kernel/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
src/: main.rs
