[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11"
noto-sans-mono-bitmap = "0.2"
conquer-once = { version = "0.3.2", default-features = false }
spin = "0.9.8"
x86_64 = "0.15.5"
uart_16550 = "0.6.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
volatile = "0.2.6"
pic8259 = "0.11.0"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false